objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACV_Amount2__c</fullName>
        <description>Real Time Calculation. Sum of all Closed Opportunities ACV (License/RichAds) Amount.</description>
        <label>Account ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_Cohort__c</fullName>
        <description>Finance defined field</description>
        <label>ACV Cohort</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Clean_up_Action_Recommended__c</fullName>
        <description>Designates the recommended action to take on the account.  Tied to the Reviewer field as the reviewer has recommended this action.</description>
        <inlineHelpText>Designates the recommended action to take on the account.  Tied to the Reviewer field as the reviewer has recommended this action.</inlineHelpText>
        <label>Account Clean-up: Action Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Keep - Transfer</fullName>
                </value>
                <value>
                    <fullName>Keep - Ads</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <description>Used to add notes related to the Status of the account, and highlight any action plans to change or maintain account status.</description>
        <inlineHelpText>Used to add notes related to the Status of the account, and highlight any action plans to change or maintain account status.</inlineHelpText>
        <label>Health of the Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>SEMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <description>Customer - Existing Customer
Prospect - Future Prospect
Target - Actively Pursuing
Terminated Customer - Former Customer
Lost Opportunity - No Longer Pursued
Out of Business - No Longer in Business
Disqualified - No Longer Qualified</description>
        <inlineHelpText>Customer - Existing Customer
Prospect - Future Prospect
Target - Actively Pursuing
Terminated Customer - Former Customer
Lost Opportunity - No Longer Pursued
Out of Business - No Longer in Business
Disqualified - No Longer Qualified</inlineHelpText>
        <label>Account Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Top X Target</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Terminated Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acount_Import_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This id is used for mass imports only. Allowing us to avoid duplicate unique IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>This id is used for mass imports only. Allowing us to avoid duplicate unique IDs.</inlineHelpText>
        <label>Account Import ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360i</fullName>
                </value>
                <value>
                    <fullName>3Atlanta</fullName>
                </value>
                <value>
                    <fullName>4D</fullName>
                </value>
                <value>
                    <fullName>AB InBev</fullName>
                </value>
                <value>
                    <fullName>Absolute Media</fullName>
                </value>
                <value>
                    <fullName>Acosta - CT</fullName>
                </value>
                <value>
                    <fullName>AKQA</fullName>
                </value>
                <value>
                    <fullName>AppNexus</fullName>
                </value>
                <value>
                    <fullName>ARC Worldwide Chicago</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Avenue A Razorfish</fullName>
                </value>
                <value>
                    <fullName>Bailey Lauerman Nebraska</fullName>
                </value>
                <value>
                    <fullName>Bard Advertising Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Barkley</fullName>
                </value>
                <value>
                    <fullName>Berstein Rein</fullName>
                </value>
                <value>
                    <fullName>Blue Chip</fullName>
                </value>
                <value>
                    <fullName>Bolin</fullName>
                </value>
                <value>
                    <fullName>Brothers &amp; Co. Tulsa</fullName>
                </value>
                <value>
                    <fullName>Brunner Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Butler, Shine Stern +</fullName>
                </value>
                <value>
                    <fullName>BVK Chicago</fullName>
                </value>
                <value>
                    <fullName>BVK Milwaukee</fullName>
                </value>
                <value>
                    <fullName>Campbell Ewald</fullName>
                </value>
                <value>
                    <fullName>Carat</fullName>
                </value>
                <value>
                    <fullName>Carat – LA</fullName>
                </value>
                <value>
                    <fullName>Carat – SF</fullName>
                </value>
                <value>
                    <fullName>Carmichael Lynch</fullName>
                </value>
                <value>
                    <fullName>Catapult Marketing Nashville</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>ClickHere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_300__c</fullName>
        <label>B2B 300</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_New__c</fullName>
        <description>Sum of All Account Opportunity Amounts were Stage equals (SaaS) Contract Signed - 100%</description>
        <label>Closed Won New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Content_Management_System_del__c</fullName>
        <label>Content Management System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Agility</fullName>
                </value>
                <value>
                    <fullName>Autonomy (Hewlett-Packard)</fullName>
                </value>
                <value>
                    <fullName>Axial Partners</fullName>
                </value>
                <value>
                    <fullName>GSI Commerce (eBay)</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Sitecore</fullName>
                </value>
                <value>
                    <fullName>Team Site (HP)</fullName>
                </value>
                <value>
                    <fullName>Webcollage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <description>Start date of the initial SaaS contract.</description>
        <inlineHelpText>Start date of the initial SaaS contract.</inlineHelpText>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <description>Contract renewal date</description>
        <inlineHelpText>Contract renewal date</inlineHelpText>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sales_Price_Open_Opptys__c</fullName>
        <description>Roll up field of CSP for Open opptys</description>
        <label>Contract Sales Price Open Opptys</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Attributable</fullName>
                </value>
                <value>
                    <fullName>Fixed/Attributable</fullName>
                </value>
                <value>
                    <fullName>Grid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataFeed_Notes__c</fullName>
        <description>Populated by Customer Service when the client is live on support.</description>
        <inlineHelpText>Populated by Customer Service when the client is live on support.</inlineHelpText>
        <label>Client Profile URL MindTouch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Website_Technologies_c__c</fullName>
        <label>Datanyze_Website_Technologies_c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESP__c</fullName>
        <description>Indicates current Email Service Provider (ESP) used.</description>
        <inlineHelpText>Indicates current Email Service Provider (ESP) used.</inlineHelpText>
        <label>ESP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhost</fullName>
                </value>
                <value>
                    <fullName>Air2Web</fullName>
                </value>
                <value>
                    <fullName>Artegic</fullName>
                </value>
                <value>
                    <fullName>Axciom Digital</fullName>
                </value>
                <value>
                    <fullName>Bronto</fullName>
                </value>
                <value>
                    <fullName>Cheetahmail (Experian)</fullName>
                </value>
                <value>
                    <fullName>Constant Contact</fullName>
                </value>
                <value>
                    <fullName>Cool Savings</fullName>
                </value>
                <value>
                    <fullName>DoubleClick</fullName>
                </value>
                <value>
                    <fullName>EmailVision</fullName>
                </value>
                <value>
                    <fullName>Emarsys</fullName>
                </value>
                <value>
                    <fullName>eOn Communications</fullName>
                </value>
                <value>
                    <fullName>Epsilon Interactive</fullName>
                </value>
                <value>
                    <fullName>Eway Direct</fullName>
                </value>
                <value>
                    <fullName>Exact Target</fullName>
                    <label>Exact Target-Salesforce</label>
                </value>
                <value>
                    <fullName>Gold Lasso</fullName>
                </value>
                <value>
                    <fullName>GSI Commerce (e-Dialog)</fullName>
                </value>
                <value>
                    <fullName>Harte-Hanks</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Lashback</fullName>
                </value>
                <value>
                    <fullName>Lyris</fullName>
                </value>
                <value>
                    <fullName>MailChimp</fullName>
                </value>
                <value>
                    <fullName>MAPP</fullName>
                </value>
                <value>
                    <fullName>NeoLane</fullName>
                </value>
                <value>
                    <fullName>Optivo</fullName>
                </value>
                <value>
                    <fullName>Recontek</fullName>
                </value>
                <value>
                    <fullName>Responsys</fullName>
                </value>
                <value>
                    <fullName>Return Path</fullName>
                </value>
                <value>
                    <fullName>SailThru</fullName>
                </value>
                <value>
                    <fullName>Silverpop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_Commerce_Platform__c</fullName>
        <label>E-Commerce Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3dCart</fullName>
                </value>
                <value>
                    <fullName>Alexander Interactive</fullName>
                </value>
                <value>
                    <fullName>Amazon Services</fullName>
                </value>
                <value>
                    <fullName>American Eagle</fullName>
                </value>
                <value>
                    <fullName>Amplience</fullName>
                </value>
                <value>
                    <fullName>Apache</fullName>
                </value>
                <value>
                    <fullName>Aquity</fullName>
                </value>
                <value>
                    <fullName>AspDotNetStorefront</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>BEA WebLogic</fullName>
                </value>
                <value>
                    <fullName>Broad Vision</fullName>
                </value>
                <value>
                    <fullName>ChannelAdvisor</fullName>
                </value>
                <value>
                    <fullName>Channel Intelligence</fullName>
                </value>
                <value>
                    <fullName>DemandWare</fullName>
                </value>
                <value>
                    <fullName>eCommera</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Escalate Retail</fullName>
                </value>
                <value>
                    <fullName>Fry</fullName>
                </value>
                <value>
                    <fullName>GSI</fullName>
                </value>
                <value>
                    <fullName>Home grown</fullName>
                </value>
                <value>
                    <fullName>Hybris</fullName>
                </value>
                <value>
                    <fullName>IBM Websphere</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Intershop</fullName>
                </value>
                <value>
                    <fullName>Interspire</fullName>
                </value>
                <value>
                    <fullName>InterWorld</fullName>
                </value>
                <value>
                    <fullName>J2EE</fullName>
                </value>
                <value>
                    <fullName>Java classes and JSP pages</fullName>
                </value>
                <value>
                    <fullName>Javelin (Carmel)</fullName>
                </value>
                <value>
                    <fullName>KalioCommerce (DMInSite)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <description>Account Manager’s Executive connection at the client. Facilitating account expansion opportunities and acting as a support for client escalations.  Assignments managed by Jake Bailey, VP Product Marketing and Solutions.</description>
        <inlineHelpText>Account Manager’s Executive connection at the client. Facilitating account expansion opportunities and acting as a support for client escalations.  Assignments managed by Jake Bailey, VP Product Marketing and Solutions.</inlineHelpText>
        <label>Executive Sponsor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Moore</fullName>
                </value>
                <value>
                    <fullName>Amanda Berger</fullName>
                </value>
                <value>
                    <fullName>Arun Theivendirarajah</fullName>
                </value>
                <value>
                    <fullName>Bill Growney</fullName>
                </value>
                <value>
                    <fullName>Bill Pearce</fullName>
                </value>
                <value>
                    <fullName>David Ogidi</fullName>
                </value>
                <value>
                    <fullName>Devang Sachdev</fullName>
                </value>
                <value>
                    <fullName>Diane Kegley</fullName>
                </value>
                <value>
                    <fullName>Eduardo Sanchez</fullName>
                </value>
                <value>
                    <fullName>Holly Gordon</fullName>
                </value>
                <value>
                    <fullName>Jake Bailey</fullName>
                </value>
                <value>
                    <fullName>John Dickson</fullName>
                </value>
                <value>
                    <fullName>Kevin Duffey</fullName>
                </value>
                <value>
                    <fullName>Mahesh Tyagarajan</fullName>
                </value>
                <value>
                    <fullName>Marc Hayem</fullName>
                </value>
                <value>
                    <fullName>Matthieu Chouard</fullName>
                </value>
                <value>
                    <fullName>Mike DeCourcey</fullName>
                </value>
                <value>
                    <fullName>MK Marsden</fullName>
                </value>
                <value>
                    <fullName>Tyler Kohn</fullName>
                </value>
                <value>
                    <fullName>Zach Koekemoer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feed_Type__c</fullName>
        <label>Feed Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat file</fullName>
                </value>
                <value>
                    <fullName>Delta file</fullName>
                </value>
                <value>
                    <fullName>Catalog API</fullName>
                </value>
                <value>
                    <fullName>Streaming API</fullName>
                </value>
                <value>
                    <fullName>Content Feed</fullName>
                </value>
                <value>
                    <fullName>Reference Content</fullName>
                </value>
                <value>
                    <fullName>Region feed</fullName>
                </value>
                <value>
                    <fullName>SKU feed</fullName>
                </value>
                <value>
                    <fullName>Offline Feed</fullName>
                </value>
                <value>
                    <fullName>Segment Feed</fullName>
                </value>
                <value>
                    <fullName>Delta Attributes Feed</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Language__c</fullName>
        <description>Used to localize marketing campaigns, and indicate first language of the customer.</description>
        <inlineHelpText>Used to localize marketing campaigns (for all contacts under the account).  Indicates the preferred language to use when communicating with the customer.</inlineHelpText>
        <label>First Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>CZECH</fullName>
                </value>
                <value>
                    <fullName>DANISH</fullName>
                </value>
                <value>
                    <fullName>DUTCH</fullName>
                </value>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>FINNISH</fullName>
                </value>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>HUNGARIAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>JAPANESE</fullName>
                </value>
                <value>
                    <fullName>NORWEGIAN</fullName>
                </value>
                <value>
                    <fullName>POLISH</fullName>
                </value>
                <value>
                    <fullName>PORTUGUESE</fullName>
                </value>
                <value>
                    <fullName>ROMANIAN</fullName>
                </value>
                <value>
                    <fullName>RUSSIAN</fullName>
                </value>
                <value>
                    <fullName>SPANISH</fullName>
                </value>
                <value>
                    <fullName>SWEDISH</fullName>
                </value>
                <value>
                    <fullName>TURKISH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gomez__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if we are monitoring key placements on the site via Gomez.</description>
        <inlineHelpText>Check this box if we are monitoring key placements on the site via Gomez.</inlineHelpText>
        <label>Gomez</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opportunity__c</fullName>
        <description>For EMEA Target Account reporting</description>
        <formula>if(Opportunity_Count__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IR500__c</fullName>
        <label>IR500</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Competitor__c</fullName>
        <description>If the client is currently using software that is a competitor to RichRelevance&apos;s Recommend product, indicate the product.  Used for competitive selling.</description>
        <inlineHelpText>If the client is currently using software that is a competitor to RichRelevance&apos;s Recommend product, indicate the product.  Used for competitive selling.</inlineHelpText>
        <label>Incumbent Recommend Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Adtelligence</fullName>
                </value>
                <value>
                    <fullName>Agilone</fullName>
                </value>
                <value>
                    <fullName>Apptus</fullName>
                </value>
                <value>
                    <fullName>ATTRAQT</fullName>
                </value>
                <value>
                    <fullName>Baynote</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>Bloomreach</fullName>
                </value>
                <value>
                    <fullName>Certona</fullName>
                </value>
                <value>
                    <fullName>Chaordic</fullName>
                </value>
                <value>
                    <fullName>Devatics</fullName>
                </value>
                <value>
                    <fullName>Dynamic Yield</fullName>
                </value>
                <value>
                    <fullName>Early Birds</fullName>
                </value>
                <value>
                    <fullName>Econda</fullName>
                </value>
                <value>
                    <fullName>Epoq</fullName>
                </value>
                <value>
                    <fullName>Fredhopper</fullName>
                </value>
                <value>
                    <fullName>Hooklogic</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Igodigital</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Listrak</fullName>
                </value>
                <value>
                    <fullName>Maxymiser</fullName>
                </value>
                <value>
                    <fullName>Monetate</fullName>
                </value>
                <value>
                    <fullName>MyBuys</fullName>
                </value>
                <value>
                    <fullName>Neemu</fullName>
                </value>
                <value>
                    <fullName>NetWave</fullName>
                </value>
                <value>
                    <fullName>Nosto</fullName>
                </value>
                <value>
                    <fullName>NUUKIK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Engage_Contract_Exp__c</fullName>
        <description>If the client is currently using software that is a competitor to RichRelevance&apos;s Engage product, indicate the contract date their current software expires.  Used for competitive selling.</description>
        <inlineHelpText>If the client is currently using software that is a competitor to RichRelevance&apos;s Engage product, indicate the contract date their current software expires.  Used for competitive selling.</inlineHelpText>
        <label>Incumbent Engage Contract Exp.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incumbent_Engage_Provider__c</fullName>
        <description>If the client is currently using software that is a competitor to RichRelevance&apos;s Engage product, indicate the product. Used for competitive selling.</description>
        <inlineHelpText>If the client is currently using software that is a competitor to RichRelevance&apos;s Engage product, indicate the product. Used for competitive selling.</inlineHelpText>
        <label>Incumbent Engage Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Adtelligence</fullName>
                </value>
                <value>
                    <fullName>Agilone</fullName>
                </value>
                <value>
                    <fullName>Apptus</fullName>
                </value>
                <value>
                    <fullName>ATTRAQT</fullName>
                </value>
                <value>
                    <fullName>Baynote</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>Bloomreach</fullName>
                </value>
                <value>
                    <fullName>Certona</fullName>
                </value>
                <value>
                    <fullName>Chaordic</fullName>
                </value>
                <value>
                    <fullName>Devatics</fullName>
                </value>
                <value>
                    <fullName>Dynamic Yield</fullName>
                </value>
                <value>
                    <fullName>Econda</fullName>
                </value>
                <value>
                    <fullName>Epoq</fullName>
                </value>
                <value>
                    <fullName>Fredhopper</fullName>
                </value>
                <value>
                    <fullName>Hooklogic</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Igodigital</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Listrak</fullName>
                </value>
                <value>
                    <fullName>Maxymiser</fullName>
                </value>
                <value>
                    <fullName>Monetate</fullName>
                </value>
                <value>
                    <fullName>MyBuys</fullName>
                </value>
                <value>
                    <fullName>NetWave</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>no personalised merchandising yet</fullName>
                </value>
                <value>
                    <fullName>Nosto</fullName>
                </value>
                <value>
                    <fullName>NUUKIK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>